<resources>
    <string name="app_name">My Carta</string>
    <string name="email">Email</string>
    <string name="glad_to_see_you">Glad to see you!</string>
    <string name="password">Password</string>
    <string name="createAccount" translatable="true">Create Account</string>
    <string name="subtitleMyCarta" translatable="true">Make your Life\nSmarter and Easier</string>
    <string name="forgot_password" translatable="true">Forgot Password?</string>
    <string name="don_t_be_sad">Don\'t be sad</string>
    <string name="your_account_will_be_restore">Your Account will Be Restore !</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string-array name="quotes">
        <item>For I don’t care too much for money, for money can\’t buy me love.</item>
        <item>Love conquers all things except poverty and toothache.</item>
        <item>Money and women are the most sought after and the least known about of any two things we have.</item>
        <item>Money is not the most important thing in the world. Love is. Fortunately, I love money.</item>
        <item>While money doesn’t buy love, it puts you in a great bargaining position.</item>
        <item>On what he’s spent the most money on: In the ’70s it was skateboards, in the ’80s it was drugs, in the ’90s it was art, and now it\’s my family</item>
        <item>Take a better stand. Put money in my mom\'s hand. Get my daughter this college plan, so she don’t need no man.</item>
        <item>If you\'re saving, you\'re succeeding.</item>
        <item>It’s not how much money you make, but how much money you keep, how hard it works for you, and how many generations you keep it for.</item>
        <item>If you wish to get rich, save what you get. A fool can earn money, but it takes a wise man to save and dispose of it to his own advantage.</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="money_manager">Money\nManager</string>
    <string name="name_on_card">Cardholder Name</string>
    <string name="number_card">Card Number</string>
    <string name="cvv">CVV</string>
    <string name="typeCard">Type Card</string>
    <string name="pinModel">Pin</string>
    <string name="security_data">Security Data</string>
    <string name="secure_account">Make your account secure by changing password every month</string>
    <string name="secure_pin">Make your account secure by changing Pin every week</string>
    <string name="terms_of_service">
        <b>Terms and conditions</b>\n\nThese terms and conditions ("Terms", "Agreement") are an agreement between Mobile Application Developer ("Mobile Application Developer", "us", "we" or "our") and you ("User", "you" or "your"). This Agreement sets forth the general terms and conditions of your use of the My Carta mobile application and any of its products or services (collectively, "Mobile Application" or "Services").\n\n
        <b>Accounts and membership</b>\n\nIf you create an account in the Mobile Application, you are responsible for maintaining the security of your account and you are fully responsible for all activities that occur under the account and any other actions taken in connection with it. We may, but have no obligation to, monitor and review new accounts before you may sign in and use our Services. Providing false contact information of any kind may result in the termination of your account. You must immediately notify us of any unauthorized uses of your account or any other breaches of security. We will not be liable for any acts or omissions by you, including any damages of any kind incurred as a result of such acts or omissions. We may suspend, disable, or delete your account (or any part thereof) if we determine that you have violated any provision of this Agreement or that your conduct or content would tend to damage our reputation and goodwill. If we delete your account for the foregoing reasons, you may not re-register for our Services. We may block your email address and Internet protocol address to prevent further registration.\n\n
        <b>User content</b>\n\nWe do not own any data, information or material ("Content") that you submit in the Mobile Application in the course of using the Service. You shall have sole responsibility for the accuracy, quality, integrity, legality, reliability, appropriateness, and intellectual property ownership or right to use of all submitted Content. We may, but have no obligation to, monitor and review Content in the Mobile Application submitted or created using our Services by you. Unless specifically permitted by you, your use of the Mobile Application does not grant us the license to use, reproduce, adapt, modify, publish or distribute the Content created by you or stored in your user account for commercial, marketing or any similar purpose. But you grant us permission to access, copy, distribute, store, transmit, reformat, display and perform the Content of your user account solely as required for the purpose of providing the Services to you.
        <b>Backups</b>\n\nWe are not responsible for Content residing in the Mobile Application. In no event shall we be held liable for any loss of any Content. It is your sole responsibility to maintain appropriate backup of your Content. Notwithstanding the foregoing, on some occasions and in certain circumstances, with absolutely no obligation, we may be able to restore some or all of your data that has been deleted as of a certain date and time when we may have backed up data for our own purposes. We make no guarantee that the data you need will be available.Links to other mobile applicationsAlthough this Mobile Application may link to other mobile applications, we are not, directly or indirectly, implying any approval, association, sponsorship, endorsement, or affiliation with any linked mobile application, unless specifically stated herein. Some of the links in the Mobile Application may be "affiliate links". This means if you click on the link and purchase an item, Mobile Application Developer will receive an affiliate commission. We are not responsible for examining or evaluating, and we do not warrant the offerings of, any businesses or individuals or the content of their mobile applications. We do not assume any responsibility or liability for the actions, products, services, and content of any other third-parties. You should carefully review the legal statements and other conditions of use of any mobile application which you access through a link from this Mobile Application. Your linking to any other off-site mobile applications is at your own risk.\n\n
        <b>Changes and amendments</b>\n\nWe reserve the right to modify this Agreement or its policies relating to the Mobile Application or Services at any time, effective upon posting of an updated version of this Agreement in the Mobile Application. When we do, we will send you an email to notify you. Continued use of the Mobile Application after any such changes shall constitute your consent to such changes. Policy was created with https://www.WebsitePolicies.com\n\n
        <b>Acceptance of these terms</b>\n\nYou acknowledge that you have read this Agreement and agree to all its terms and conditions. By using the Mobile Application or its Services you agree to be bound by this Agreement. If you do not agree to abide by the terms of this Agreement, you are not authorized to use or access the Mobile Application and its Services.\n\n
        <b>Contacting us</b>\n\nIf you would like to contact us to understand more about this Agreement or wish to contact us concerning any matter relating to it, you may write a letter to muhammadfaisalr17@gmail.com\n\n
        <i>This document was last updated on September 29, 2019</i>
    </string>
    <string name="data_secure">
        Your data will be encrypted on database and no one can read your data.
    </string>
    <string name="please_select_card">Please Select Card in \'Card Switcher\' below!</string>
    <string name="how_to_use_carta_board">
        <b>CartaBoard is Under Development!</b>
    </string>
    <string name="how_to_use_carta_pay">
        <b>
        \u2022 Open MyCarta APP\n\n
        \u2022 Move to tab Cards and choose the cards you want to make a payment\n\n
        \u2022 Click Pay button below cards display in cards tab\n\n
        \u2022 The Barcode or QR is your card number\n\n
        \u2022 Show Pay Page into a cashier for a scan the Barcode or QRCode\n\n
        \u2022 If card number correctly , transaction completely
        </b>
    </string>
    <string name="why_carta_pay">
        \u2022 CartaPay make a transaction cashless and cardless!
        \u2022 Pay what you need just scan the barcode!
        \u2022 Minimize data theft crime
    </string>
    <string name="about_app">About App</string>
    <string name="about_mycarta">MyCarta is application to make your life <b>smarter, easier, happier !</b> Why? Because MyCarta can keep your card data without risk.\n\nData in database will be encrypted and no ones can know your data!.\n\nAnd MyCarta can record your spending or income and with the article how to saving money and budget planning that can make your life <b>smarter, easier, happier!.</b></string>
    <string name="your_cards">Your Cards</string>
    <string name="add_new_card">Add New Card</string>
    <string name="owner">Owner</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="test_currency">Rp120.000</string>
    <string name="test_currency_0">Rp0,00</string>
    <string name="see_transaction">See Transaction</string>
    <string name="back">Back</string>
    <string name="menu">Menu</string>
    <string name="list_transaction">List Transaction</string>
    <string name="edit">Edit</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="delete">Delete</string>
    <string name="delete_success">Success Delete Card!</string>
    <string name="edit_card">Edit Card</string>
    <string name="delete_card">Delete Card</string>
    <string name="card_info">Card Info</string>
    <string name="description">Description</string>
    <string name="card_name_hint">Card Name <i>(ex : E-Money Card)</i></string>
    <string name="prioritize_card">Prioritize Card</string>
    <string name="create_transaction">Create Transaction</string>
    <string name="Save">save</string>
    <string name="name">Name</string>
    <string name="amount">Amount</string>
    <string name="insert_your_name">Insert your name</string>
    <string name="all_cards">All Cards</string>
    <string name="article">Articles</string>
    <string name="logout">Logout</string>
    <string name="copy_all_information">Copy All Information</string>
    <string name="qr_code">QR Code</string>
    <string name="barcode">Barcode</string>
    <string name="finances_well_controlled">Your finances are well controlled!</string>
    <string name="finances_expense_too_high">What\'s wrong with you? Your expenses are too high</string>
    <string name="finance_balance">Your financial balance between expense and income</string>
    <string name="card_list">Card List</string>
    <string name="test_card_number">\u2022 4094</string>
    <string name="sign_up">Sign up</string>
    <string name="new_user">New user?</string>
    <string name="already_account">Already Account?</string>
    <string name="make_your_life_easier_now">Make your life easier now!</string>
    <string name="setup_pin">Setup PIN</string>
    <string name="are_you_sure_want_to_update">Are you sure want to update your profile?</string>
    <string name="yes_update">Yes, Update</string>
    <string name="update_profile">Update Profile</string>
</resources>