<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:elevation="4dp"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    app:cardCornerRadius="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:background="@drawable/animation_blue"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:fontFamily="@font/roboto_bold"
            android:id="@+id/textCardBalance"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/test_currency"
            android:textColor="@color/white" />


        <TextView
            android:fontFamily="@font/maven_pro"
            android:id="@+id/textCardNumber"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:text="@string/test_card_number"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:fontFamily="@font/maven_pro"
            android:id="@+id/textCardName"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:text="@string/name_on_card"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
