<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".v1.home.fragment.card.bottom_sheet.edit.EditCardBottomSheetFragment">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <RelativeLayout
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/icClose"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:foreground="?attr/selectableItemBackground"
                android:padding="12dp"
                android:src="@drawable/ic_close" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_card"
                android:textSize="16sp"
                android:fontFamily="@font/maven_pro_medium"
                android:layout_toEndOf="@id/icClose"
                android:layout_centerInParent="true"
                android:textColor="@color/buttonPrimary"/>

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:background="@drawable/bg_spinner_blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="vertical">

                <Spinner
                    android:spinnerMode="dialog"
                    android:id="@+id/spinnerCardType"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="6dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                app:boxBackgroundMode="outline"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeWidth="1dp"
                app:boxStrokeColor="@color/colorBluePrimary"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:hintTextColor="@color/colorBluePrimary"
                app:helperText="@string/insert_your_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputCardHolderName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/maven_pro"
                    android:hint="@string/owner"
                    android:maxLength="18"
                    android:padding="16dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                app:boxBackgroundMode="outline"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeWidth="1dp"
                app:boxStrokeColor="@color/colorBluePrimary"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:hintTextColor="@color/colorBluePrimary">

                <EditText
                    android:hint="@string/card_name_hint"
                    android:id="@+id/inputCardName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="16"
                    android:padding="16dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                app:boxBackgroundMode="outline"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeWidth="1dp"
                app:boxStrokeColor="@color/colorBluePrimary"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:hintTextColor="@color/colorBluePrimary">


                <EditText
                    android:hint="@string/number_card"
                    android:id="@+id/inputCardNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="16"
                    android:padding="16dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                app:boxBackgroundMode="outline"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeWidth="1dp"
                app:boxStrokeColor="@color/colorBluePrimary"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:hintTextColor="@color/colorBluePrimary">

                <EditText
                    android:hint="@string/description"
                    style="@style/EditTextHint"
                    android:id="@+id/inputDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="3"
                    android:gravity="start"
                    android:maxLength="24"
                    android:padding="16dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/ckbPrioritize"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prioritize_card"
                android:fontFamily="@font/maven_pro"
                android:paddingStart="8dp"/>


            <Button
                android:id="@+id/buttonSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/button_primary"
                android:text="Save"
                android:textColor="@color/white" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>