<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".forgot_password.ForgotPasswordActivity">


    <ImageView
        android:padding="2dp"
        android:foreground="?attr/selectableItemBackground"
        android:id="@+id/imageBack"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_back_gray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/work_sans_semibold"
        android:textColor="@color/textColorPrimary"
        android:text="@string/don_t_be_sad"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/work_sans_semibold"
        android:textColor="@color/textColorPrimary"
        android:text="@string/your_account_will_be_restore"
        android:textSize="14sp" />


    <com.rengwuxian.materialedittext.MaterialEditText
        android:inputType="textEmailAddress"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="#4CAF50"
        android:layout_margin="6dp"
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email" />

    <Button
        android:elevation="4dp"
        android:id="@+id/buttonReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_primary"
        android:fontFamily="@font/work_sans_semibold"
        android:text="Reset"
        android:textColor="@color/white" />

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already Account?"
            android:textColor="@color/grayPrimary"
            android:textSize="12sp"
            android:padding="4dp"/>
        <TextView
            android:id="@+id/textSignIn"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign in"
            android:textColor="@color/buttonPrimary"
            android:textSize="12sp"
            android:padding="4dp"/>

    </LinearLayout>


</LinearLayout>